move png files to public/assets

--- a/private/mainPage/index.html
+++ b/private/mainPage/index.html
@@ -28,7 +28,7 @@
 
             <nav id="top-bar" class="row white-word">
                 <div class="main-page" class="col-2" onclick="window.location.reload()">
-                    <img src="andthen_logo_6.png" alt="" class="logo">
+                    <img src="/assets/andthen_logo_6.png" alt="" class="logo">
                 </div>
                 <div id="notification" class="col-8"></div>
                 <div class="logout white-word" id="logout-button" class="col-2">Logout</div>
@@ -74,7 +74,7 @@
                         <br>
 
                         <div class="center-image">
-                            <img src="./create_project.png" alt="" class="create-project-image">
+                            <img src="/assets/create_project.png" alt="" class="create-project-image">
                         </div>
 
                     </div>
