cm fix finsih task bug

--- a/private/mainPage/index.html
+++ b/private/mainPage/index.html
@@ -58,10 +58,10 @@
 
                     <div class="user-content-button-container">
                         <button type="button" class="update-info" data-bs-toggle="modal"
-                            data-bs-target="#updateInfoModal">Update User Info</button>
+                            data-bs-target="#updateInfoModal">Edit User Info</button>
 
                         <button type="button" class="update-password" data-bs-toggle="modal"
-                            data-bs-target="#updatePasswordModal">Update Password</button>
+                            data-bs-target="#updatePasswordModal">Edit Password</button>
                     </div>
 
                 </section>
