add show password toggle in main page and login page

--- a/private/mainPage/index.html
+++ b/private/mainPage/index.html
@@ -264,13 +264,18 @@
                             <input type="password" class="form-control rounded-3 " id="password1"
                                 placeholder="password">
                             <label for="password1">New Password</label>
+                            
                         </div>
 
                         <div class="form-floating mb-3">
                             <input type="password" class="form-control rounded-3 " id="password2"
                                 placeholder="password">
                             <label for="password2">Confirm New Password</label>
+
                         </div>
+
+                        <input type="checkbox" id="toggle-password">
+                        <label for="toggle-password">Show Password</label>
 
                         <button type="submit" id="update-password-button">Update</button>
                     </form>
