minor change to login page

--- a/public/index.html
+++ b/public/index.html
@@ -52,14 +52,12 @@
                     <form id="user-login">
 
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control rounded-3" id="username_email"
-                                placeholder="name@example.com" value="user">
+                            <input type="text" class="form-control rounded-3" id="username_email" value="user">
                             <label for="username_email">Username / Email</label>
                         </div>
 
                         <div class="form-floating mb-3">
-                            <input type="password" class="form-control rounded-3 " id="password" placeholder="password"
-                                value="!1Qwertyuiop">
+                            <input type="password" class="form-control rounded-3 " id="password" value="!1Qwertyuiop">
                             <label for="password">Password</label>
                         </div>
 
