--- a/public/404.html
+++ b/public/404.html
@@ -39,7 +39,7 @@
                     followed may either be broken or no longer exists. Please try again, or take a look at our.</p>
             </div>
             <div class="error__nav e-nav">
-                <a href="http://www.thedresscounter.com" target="_blanck" class="e-nav__link"></a>
+                <a href="/" target="_blanck" class="e-nav__link"></a>
             </div>
         </div>
         <!-- END Content -->
